fixed text overflow

--- a/styles.css
+++ b/styles.css
@@ -39,12 +39,15 @@ body {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  padding-left: 5rem;
+  padding: 0 1rem 2rem 5rem;
+  /* padding-left: 5rem;
+  padding-bottom: 2rem; */
   color: white;
   font-size: 32px;
   background-color: #171717;
   border: 2px solid #9dffad;
   border-radius: 15px;
+  overflow-y: auto;
 }
 
 #countdown {
